2015-08-12  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.texi (@code{@@enumerate}): be clearer that
	@enumerate 0 is allowed, but signed numbers are not.

2015-08-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_target): Always canonicalize
	target nodename.
	* info/t/xref-across-lines.sh: New test.

2015-08-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (apropos_in_all_indices): Check if there is no 
	filename, to avoid crash with "info -k" when there is a 
	malformed dir entry.  Crash reported by Ivan Pacheco, and cause 
	of crash discovered by Sergey Poznyakoff.

2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Indices): Remove unnecessary cross-reference.

2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (_scroll_forward, _scroll_backward): Set point 
	at beginning (resp. end) of node if going backwards (resp.  
	forwards) failed.  If we did go backwards, put the cursor at the
	beginning of the window.  Change since Texinfo 5.2 reported by
	Benno Schulenberg.

2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forward_move_node_structure): Don't go down a 
	menu for a dir node.  (Broken since 2015-07-13 when N_IsInternal 
	ceased to be set for dir nodes.)
	
2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Cursor Commands): Remove explanation for 
	having cursor movement commands in Info.  Change "have" to "has" 
	and "identical to" to "the same as".

	* doc/info-stnd.texi (Searching Commands, Index Commands): Split
	Searching Commands in two.

	* doc/info-stnd.texi (Top): Re-jig.
	(Stand-alone Info): Change "ASCII terminal" to "text terminal", 
	to cover e.g. UTF-8 and ISO-8859-1.

	* doc/info-stnd.texi (Search Commands): Move mention of 
	'min-search-length' to end.  Remove repeated information about 
	'}' and '{'.  Remove mention that default search string is 