@@ -173,7 +173,7 @@ $result_converted{'plaintext'}->{'enumerate_above_ten'} = '  14. a
 ';
 
 
-$result_converted{'html_text'}->{'enumerate_above_ten'} = '<ol>
+$result_converted{'html_text'}->{'enumerate_above_ten'} = '<ol start="14">
 <li> a
 </li></ol>
 ';
