@@ -1,3 +1,8 @@
+2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Convert/HTML.pm (_convert_enumerate_command): Use
+	<ol start="NUMBER"> for numeric argument other than 1.
+
 2015-08-12  Karl Berry  <karl@freefriends.org>
 
 	* doc/texinfo.texi (@code{@@enumerate}): be clearer that
